syntax = "proto3";

package market_data;

message MoneyMessageProto {
    int64 u = 1;
    double n = 2;
    string c = 3;
}
